--- a/Tools/README
+++ b/Tools/README
@@ -1,4 +1,5 @@
-This directory contains a number of Python programs that are useful
+# This directory contains a number of Python programs that are useful
+
 while building or extending Python.
 
 build           Automatically generated directory by the build system
